# type-beat

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  notes.md  resources.qrc
.github/workflows/: ci.yml  release.yml
packaging/checksums/: README.md  ffmpeg-linux.sha256  ffmpeg-macos.sha256  ffmpeg-windows.sha256  ffprobe-macos.sha256
packaging/linux/: TypeBeat.desktop  com.typebeat.app.appdata.xml  type-beat.appdata.xml  type-beat.desktop
packaging/macos/: Info.plist.in
packaging/windows/: TypeBeat.rc
src/: main.cpp  version.h.in
src/core/: config.h  core.h  encoder_detection.h  ffmpeg.cpp  ffmpeg.h  ffmpeg_utils.h  ffprobe.cpp  ffprobe.h  file_info.h  file_utils.cpp  file_utils.h  file_validator.cpp  file_validator.h  preview_cache.cpp  preview_cache.h  render_config.h  render_profile.cpp  render_profile.h
src/settings/: app_settings.cpp  app_settings.h
src/ui/: file_input.cpp  file_input.h  main_window.cpp  main_window.h  preview_widget.cpp  preview_widget.h
tests/: test_ffmpeg_args.cpp  test_file_utils.cpp  test_file_validation.cpp  test_file_validator.cpp  test_preview_cache.cpp  test_render_profile.cpp
